# tour-backend

./: pyproject.toml
accommodations/: admin.py  models.py  serializers.py  test_accommodations.py  urls.py  views.py
accommodations/migrations/: 0001_initial.py  0002_accommodation_region_alter_accommodation_amenities.py  0003_city_accommodation_type_accommodation_city.py  0004_alter_city_options.py
bookings/: admin.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_status.py
common/: permissions.py
config/: settings.py  urls.py
payments/: models.py
payments/migrations/: 0001_initial.py
room_types/: admin.py  models.py  serializers.py  views.py
room_types/migrations/: 0001_initial.py  0002_rename_num_bathroos_roomtype_num_bathrooms.py  0003_remove_roomtype_beds_bedconfiguration_room_type_and_more.py  0004_alter_bedconfiguration_bed_type.py  0005_alter_roomtype_accommodation.py  0006_alter_roomtype_accommodation.py  0007_alter_roomtype_accommodation.py  0008_alter_roomtype_base_occupancy_and_more.py
users/: admin.py  managers.py  mixins.py  models.py  serializers.py  test_users.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_email_and_more.py  0003_alter_user_phone_number.py  0004_guestinfo_alter_user_email_alter_user_first_name_and_more.py
wishlists/: admin.py  models.py  serializers.py  test_wishlists.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py  0002_alter_wishlist_user.py  0003_alter_wishlist_name.py
